# prpgen

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DATABASE.md  LICENSE-COMPATIBILITY.md  NOTICES  README-PRP-TEMPLATE.md  README-PRPGEN.md  README.md  RELEASE_INSTRUCTIONS.md  package.json  pnpm-lock.yaml  vitest.config.backend.ts  vitest.config.frontend.ts  vitest.config.ts
docs/: ADAPTATION_PLAN.md  CRYSTAL_ARCHITECTURE_ANALYSIS.md  CRYSTAL_ICE.md  PROGRESS_SUMMARY.md  PRP-TEMPLATE-SYSTEM.md  README-TEMPLATES.md  crystal_prp_config.md
frontend/: index.html  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AboutDialog.tsx  Help.tsx  PRPManagement.tsx  PRPSearchDialog.tsx  Settings.tsx  Sidebar.tsx  TemplateEditor.tsx  TemplateManagement.tsx  TemplateSearchDialog.tsx  URLImportDialog.tsx  Welcome.tsx
main/: package.json  tsconfig.build.json
main/src/: index.ts  preload.ts
resources/prp-templates/: prp-template-guide.md
scripts/: README.md  migrate-prp-templates.js  migrate-prp-templates.ts  migrate-templates-electron.js  migrate-templates-simple.js  migrate-templates-tauri.js  prepare-new-repo.sh  test-prp-generation.js
shared/types/: telemetry.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cancel.rs  config.rs  generation.rs  mod.rs  prp.rs  template.rs
src-tauri/src/models/: mod.rs  prp.rs  template.rs
src-tauri/src/services/: claude.rs  database.rs  mod.rs
src-tauri/src/telemetry/: mod.rs  otlp_receiver.rs
tests/: vitest.setup.ts
(+62 files in other folders)
